Allowed for matching on fully qualified persistence type names Changed name of persistence manifest file for Throughput collector to prevent conflicts with Service Control host

--- a/src/Particular.ThroughputCollector.Persistence.RavenDb/Particular.ThroughputCollector.Persistence.RavenDb.csproj
+++ b/src/Particular.ThroughputCollector.Persistence.RavenDb/Particular.ThroughputCollector.Persistence.RavenDb.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="persistence.manifest">
+    <None Update="throughput.persistence.manifest">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
