--- a/src/Particular.ThroughputCollector.Persistence.InMemory/Particular.ThroughputCollector.Persistence.InMemory.csproj
+++ b/src/Particular.ThroughputCollector.Persistence.InMemory/Particular.ThroughputCollector.Persistence.InMemory.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="persistence.manifest" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="throughput.persistence.manifest" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
   <ItemGroup>
