broker settings setup and methods, tests for broker and persistence manifests

--- a/src/Particular.ThroughputCollector/Particular.ThroughputCollector.csproj
+++ b/src/Particular.ThroughputCollector/Particular.ThroughputCollector.csproj
@@ -20,4 +20,12 @@
     <FrameworkReference Include="Microsoft.AspNetCore.App" />  
   </ItemGroup>
 
+  <ItemGroup>
+	  <ContentWithTargetPath Include="BrokerThroughput\throughput.broker.manifest">
+		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		<TargetPath>throughput.broker.manifest</TargetPath>
+	  </ContentWithTargetPath>
+	  <None Include="BrokerThroughput\throughput.broker.manifest" />
+  </ItemGroup>
+  
 </Project>
