--- a/src/Particular.ThroughputCollector.UnitTests/Particular.ThroughputCollector.UnitTests.csproj
+++ b/src/Particular.ThroughputCollector.UnitTests/Particular.ThroughputCollector.UnitTests.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Particular.ThroughputCollector.Persistence.InMemory\Particular.ThroughputCollector.Persistence.InMemory.csproj" />
     <ProjectReference Include="..\Particular.ThroughputCollector\Particular.ThroughputCollector.csproj" />
     <ProjectReference Include="..\TestHelper\TestHelper.csproj" />
   </ItemGroup>
@@ -16,11 +17,6 @@
     <PackageReference Include="NUnit" />
     <PackageReference Include="NUnit3TestAdapter" />
     <PackageReference Include="Particular.Approvals" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="API\" />
-    <Folder Include="Infrastructure\" />
   </ItemGroup>
 
 </Project>
