--- a/src/Particular.ThroughputCollector/Particular.ThroughputCollector.csproj
+++ b/src/Particular.ThroughputCollector/Particular.ThroughputCollector.csproj
@@ -10,6 +10,9 @@
   <Import Project="..\ProjectReferences.Persisters.ThroughputCollector.props" />
   
   <ItemGroup>
+    <PackageReference Include="Azure.Identity"/>
+    <PackageReference Include="Azure.Monitor.Query"/>
+    <PackageReference Include="Azure.ResourceManager.ServiceBus"/>
     <PackageReference Include="System.Configuration.ConfigurationManager" />
     <ProjectReference Include="..\Particular.ThroughputCollector.Persistence\Particular.ThroughputCollector.Persistence.csproj" />
     <ProjectReference Include="..\ServiceControl.Configuration\ServiceControl.Configuration.csproj" />
