--- a/src/Particular.ThroughputCollector.Persistence.InMemory/.editorconfig
+++ b/src/Particular.ThroughputCollector.Persistence.InMemory/.editorconfig
@@ -1,4 +1,11 @@
 [*.cs]
 
+# Disable ReSharper custom formatters
+disable_formatter = true
+
 # Justification: ServiceControl app has no synchronization context
 dotnet_diagnostic.CA2007.severity = none
+# Justification: Rider displays an error to do with "Accessibility modifiers required (https://learn.microsoft.com/dotnet/fundamentals/code-analysis/style-rules/ide0040)"
+dotnet_diagnostic.IDE0040.severity = none
+
+csharp_style_var_elsewhere = true:error
