--- a/src/Particular.ThroughputCollector.Persistence.InMemory/Particular.ThroughputCollector.Persistence.InMemory.csproj
+++ b/src/Particular.ThroughputCollector.Persistence.InMemory/Particular.ThroughputCollector.Persistence.InMemory.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
