--- a/src/Particular.ThroughputCollector/.editorconfig
+++ b/src/Particular.ThroughputCollector/.editorconfig
@@ -1,8 +1,13 @@
 [*.cs]
 
+# Disable ReSharper custom formatters
+disable_formatter = true
+
 # Justification: ServiceControl app has no synchronization context
 dotnet_diagnostic.CA2007.severity = none
 # Justification: Rider displays an error to do with "Accessibility modifiers required (https://learn.microsoft.com/dotnet/fundamentals/code-analysis/style-rules/ide0040)"
 dotnet_diagnostic.IDE0040.severity = none
 # Justification: Allow switch statements with missing default
 dotnet_diagnostic.IDE0010.severity = suggestion
+
+csharp_style_var_elsewhere = true:error
