--- a/src/Particular.ThroughputCollector/Particular.ThroughputCollector.csproj
+++ b/src/Particular.ThroughputCollector/Particular.ThroughputCollector.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Azure.Identity" />
     <PackageReference Include="Azure.Monitor.Query" />
     <PackageReference Include="Azure.ResourceManager.ServiceBus" />
+    <PackageReference Include="Microsoft.Data.SqlClient"/>
     <PackageReference Include="System.Configuration.ConfigurationManager" />
     <ProjectReference Include="..\Particular.ThroughputCollector.Persistence\Particular.ThroughputCollector.Persistence.csproj" />
     <ProjectReference Include="..\ServiceControl.Configuration\ServiceControl.Configuration.csproj" />
