--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -5,9 +5,10 @@
   </PropertyGroup>
   <ItemGroup Label="Versions for direct package references">
     <PackageVersion Include="Autofac" Version="8.0.0" />
+    <PackageVersion Include="Azure.Core" Version="1.37.0" />
     <PackageVersion Include="Azure.Identity" Version="1.11.3" />
-    <PackageVersion Include="Azure.Monitor.Query" Version="1.2.0"/>
-    <PackageVersion Include="Azure.ResourceManager.ServiceBus" Version="1.0.0"/>
+    <PackageVersion Include="Azure.Monitor.Query" Version="1.2.0" />
+    <PackageVersion Include="Azure.ResourceManager.ServiceBus" Version="1.0.0" />
     <PackageVersion Include="ByteSize" Version="2.1.2" />
     <PackageVersion Include="Caliburn.Micro" Version="4.0.212" />
     <PackageVersion Include="DotNetZip" Version="1.16.0" />
@@ -22,6 +23,7 @@
     <PackageVersion Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.IdentityModel.Abstractions" Version="7.4.0" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageVersion Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.5" />
     <PackageVersion Include="Mindscape.Raygun4Net.NetCore" Version="10.1.2" />
