reverting config change

--- a/src/ServiceControl/App.config
+++ b/src/ServiceControl/App.config
@@ -23,14 +23,13 @@ These settings are only here so that we can debug ServiceControl while developin
 
     <add key="ServiceControl/PersistenceType" value="RavenDB" />
     <add key="ServiceControl/DataSpaceRemainingThreshold" value="10" />
-    <add key="ServiceControl/MinimumStorageLeftRequiredForIngestion" value="0" />
   </appSettings>
   <connectionStrings>
     <!-- DEVS - Pick a transport connection string to match chosen transport above -->
 
     <!-- Learning -->
     <!-- If the LearningTransport connectionString is empty, it will default to the solution directory when running/debugging from the IDE -->
-    <add name="NServiceBus/Transport" connectionString="C:\Users\joasi\AppData\Local\Temp\.learningtransport" />
+    <add name="NServiceBus/Transport" connectionString="" />
 
     <!--Amazon SQS -->
     <!--<add name="NServiceBus/Transport" connectionString="Region=;QueueNamePrefix=;TopicNamePrefix=;AccessKeyId=;SecretAccessKey=;S3BucketForLargeMessages=;S3KeyPrefix=" />-->
