reverting config change

--- a/src/ServiceControl/App.config
+++ b/src/ServiceControl/App.config
@@ -28,7 +28,7 @@ These settings are only here so that we can debug ServiceControl while developin
 
     <!-- Learning -->
     <!-- If the LearningTransport connectionString is empty, it will default to the solution directory when running/debugging from the IDE -->
-    <add name="NServiceBus/Transport" connectionString="C:\Users\joasi\AppData\Local\Temp\.learningtransport" />
+    <add name="NServiceBus/Transport" connectionString="" />
 
     <!--Amazon SQS -->
     <!--<add name="NServiceBus/Transport" connectionString="Region=;QueueNamePrefix=;TopicNamePrefix=;AccessKeyId=;SecretAccessKey=;S3BucketForLargeMessages=;S3KeyPrefix=" />-->
