Refactored to use api for talking to service control.

--- a/src/Particular.ThroughputCollector/Particular.ThroughputCollector.csproj
+++ b/src/Particular.ThroughputCollector/Particular.ThroughputCollector.csproj
@@ -10,8 +10,8 @@
   <Import Project="..\ProjectReferences.Persisters.ThroughputCollector.props" />
   
   <ItemGroup>
-    <PackageReference Include="AWSSDK.CloudWatch"/>
-    <PackageReference Include="AWSSDK.SQS"/>
+    <PackageReference Include="AWSSDK.CloudWatch" />
+    <PackageReference Include="AWSSDK.SQS" />
     <PackageReference Include="Azure.Identity" />
     <PackageReference Include="Azure.Monitor.Query" />
     <PackageReference Include="Azure.ResourceManager.ServiceBus" />
@@ -19,6 +19,7 @@
     <PackageReference Include="Polly.Core"/>
     <PackageReference Include="System.Configuration.ConfigurationManager" />
     <ProjectReference Include="..\Particular.ThroughputCollector.Persistence\Particular.ThroughputCollector.Persistence.csproj" />
+    <ProjectReference Include="..\ServiceControl.Api\ServiceControl.Api.csproj" />
     <ProjectReference Include="..\ServiceControl.Configuration\ServiceControl.Configuration.csproj" />
     <ProjectReference Include="..\ServiceControl.Transports\ServiceControl.Transports.csproj"/>
   </ItemGroup>
