--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -54,6 +54,7 @@
     <PackageVersion Include="NUnit3TestAdapter" Version="4.5.0" />
     <PackageVersion Include="Particular.Approvals" Version="1.0.0" />
     <PackageVersion Include="Particular.Licensing.Sources" Version="5.1.0" />
+    <PackageVersion Include="Polly.Core" Version="8.3.1"/>
     <PackageVersion Include="PropertyChanged.Fody" Version="4.1.0" />
     <PackageVersion Include="PropertyChanging.Fody" Version="1.30.3" />
     <PackageVersion Include="PublicApiGenerator" Version="11.1.0" />
