Take out contracts into their own project so can be shared around

--- a/src/Particular.ThroughputCollector.Persistence/Particular.ThroughputCollector.Persistence.csproj
+++ b/src/Particular.ThroughputCollector.Persistence/Particular.ThroughputCollector.Persistence.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="NServiceBus" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Particular.ThroughputCollector.Contracts\Particular.ThroughputCollector.Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
