Moving types to transport seam

--- a/src/ServiceControl.Transports.RabbitMQ/ServiceControl.Transports.RabbitMQ.csproj
+++ b/src/ServiceControl.Transports.RabbitMQ/ServiceControl.Transports.RabbitMQ.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="NServiceBus.RabbitMQ" />
+    <PackageReference Include="Polly.Core"/>
   </ItemGroup>
 
   <ItemGroup>
