--- a/src/ServiceControl.DomainEvents/ServiceControl.DomainEvents.csproj
+++ b/src/ServiceControl.DomainEvents/ServiceControl.DomainEvents.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+    <PackageReference Include="NServiceBus" />
   </ItemGroup>
 
 </Project>
