Added endpointindicator of PlatformEndpoint - use that for filtering Added UserIndicator enum for not an endpoint, sendonly, etc Removed broker detailed throughput data for non nsb endpoints Added report signing (in progress)

--- a/src/Particular.ThroughputCollector/Particular.ThroughputCollector.csproj
+++ b/src/Particular.ThroughputCollector/Particular.ThroughputCollector.csproj
@@ -8,6 +8,12 @@
 
   <!-- Needed for build ordering -->
   <Import Project="..\ProjectReferences.Persisters.ThroughputCollector.props" />
+  <ItemGroup>
+    <None Remove="public-key.pem" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="public-key.pem" />
+  </ItemGroup>
   
   <ItemGroup>
     <PackageReference Include="System.Configuration.ConfigurationManager" />
