moved signature file

--- a/src/Particular.ThroughputCollector/Particular.ThroughputCollector.csproj
+++ b/src/Particular.ThroughputCollector/Particular.ThroughputCollector.csproj
@@ -12,7 +12,7 @@
     <None Remove="public-key.pem" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="public-key.pem" />
+    <EmbeddedResource Include="Shared\public-key.pem" />
   </ItemGroup>
   
   <ItemGroup>
