--- a/src/ServiceControl.Audit/App.config
+++ b/src/ServiceControl.Audit/App.config
@@ -19,15 +19,16 @@ These settings are only here so that we can debug ServiceControl while developin
     <!--<add key="ServiceControl.Audit/TransportType" value="SQLServer" />-->
 
     <!-- DEVS - Pick a persistence to run Auditing instance on. -->
-    <add key="ServiceControl.Audit/PersistenceType" value="InMemory" />
-    <!--<add key="ServiceControl.Audit/PersistenceType" value="RavenDB" />-->
+    <!--<add key="ServiceControl.Audit/PersistenceType" value="InMemory" />-->
+    <add key="ServiceControl.Audit/PersistenceType" value="RavenDB" />
+    <add key="ServiceControl.Audit/MinimumStorageLeftRequiredForIngestion" value="0" />
   </appSettings>
   <connectionStrings>
     <!-- DEVS - Pick a transport connection string to match chosen transport above -->
 
     <!-- Learning -->
     <!-- If the LearningTransport connectionString is empty, it will default to the solution directory when running/debugging from the IDE -->
-    <add name="NServiceBus/Transport" connectionString="" />
+    <add name="NServiceBus/Transport" connectionString="C:\Users\joasi\AppData\Local\Temp\.learningtransport" />
 
     <!--Amazon SQS -->
     <!--<add name="NServiceBus/Transport" connectionString="Region=;QueueNamePrefix=;TopicNamePrefix=;AccessKeyId=;SecretAccessKey=;S3BucketForLargeMessages=;S3KeyPrefix=" />-->
