Removed prefix option for report and any associated code Signature tests should now run on CI - if they fail the key needs to be adjusted

--- a/src/Particular.ThroughputCollector.UnitTests/Particular.ThroughputCollector.UnitTests.csproj
+++ b/src/Particular.ThroughputCollector.UnitTests/Particular.ThroughputCollector.UnitTests.csproj
@@ -6,10 +6,12 @@
 
   <ItemGroup>
     <None Remove="throughput-report-v1.0.json" />
+    <None Remove="ThroughputCollector\throughput-report-v2.0.json" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="ThroughputCollector\throughput-report-v1.0.json" />
+    <EmbeddedResource Include="ThroughputCollector\throughput-report-v2.0.json" />
   </ItemGroup>
 
   <ItemGroup>
