Change ThroughputCollector's RavenDB dependency to be on RavenDB.Client instead of RavenDB.Embedded since it isn't managing the embedded server

--- a/src/Particular.ThroughputCollector.Persistence.RavenDb/Particular.ThroughputCollector.Persistence.RavenDb.csproj
+++ b/src/Particular.ThroughputCollector.Persistence.RavenDb/Particular.ThroughputCollector.Persistence.RavenDb.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="ByteSize" />
     <!--<PackageReference Include="NServiceBus.CustomChecks" />-->
     <PackageReference Include="NServiceBus" />
-    <PackageReference Include="RavenDB.Embedded" />
+    <PackageReference Include="RavenDB.Client" />
   </ItemGroup>
 
   <ItemGroup>
