We also need RavenClient in setup mode

--- a/src/Particular.ThroughputCollector.Persistence/Particular.ThroughputCollector.Persistence.csproj
+++ b/src/Particular.ThroughputCollector.Persistence/Particular.ThroughputCollector.Persistence.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" />
     <PackageReference Include="NServiceBus" />
+    <PackageReference Include="RavenDB.Client" />
   </ItemGroup>
 
   <ItemGroup>
