Define SettingsNamespace for ThroughputSettings

--- a/src/Particular.ThroughputCollector.Contracts/Particular.ThroughputCollector.Contracts.csproj
+++ b/src/Particular.ThroughputCollector.Contracts/Particular.ThroughputCollector.Contracts.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="NuGet.Versioning" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ServiceControl.Configuration\ServiceControl.Configuration.csproj" />
+  </ItemGroup>
+
 </Project>
