Move throughput collector's persistence assembly resolution to be done by the ThroughputComponent in the primary instance host.  This allows the component's persistence assembly to be loaded into the same AssemblyLoadContext as the host's persistence assembly.

--- a/src/Particular.ThroughputCollector.Persistence/Particular.ThroughputCollector.Persistence.csproj
+++ b/src/Particular.ThroughputCollector.Persistence/Particular.ThroughputCollector.Persistence.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Particular.ThroughputCollector.Contracts\Particular.ThroughputCollector.Contracts.csproj" />
+    <ProjectReference Include="..\ServiceControl.Configuration\ServiceControl.Configuration.csproj" />
   </ItemGroup>
 
 </Project>
