Fix Connection controllers response serialization casing (#4063)
* Fix Connection controllers response serialization casing

* Fix approval tests

* Add an initial (and failing) version of an Approval test for the Monitoring connection details.

* Remove properties that are relevant for endpoints only and should be tested by the platform connection package

* Standardize connection controllers

* Fix project file

* Use JsonSerializerOptions.Default

* Use the concrete types directly by materializing things (since this is not a perf sensitive API)

* Use the same alignment everywhere

---------

Co-authored-by: danielmarbach <danielmarbach@users.noreply.github.com>

--- a/src/ServiceControl.Monitoring.AcceptanceTests/ServiceControl.Monitoring.AcceptanceTests.csproj
+++ b/src/ServiceControl.Monitoring.AcceptanceTests/ServiceControl.Monitoring.AcceptanceTests.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="NServiceBus.Metrics.ServiceControl" />
     <PackageReference Include="NUnit" />
     <PackageReference Include="NUnit3TestAdapter" />
+    <PackageReference Include="Particular.Approvals" />
   </ItemGroup>
 
 </Project>
