--- a/src/Particular.ThroughputCollector.Persistence.RavenDb/Particular.ThroughputCollector.Persistence.RavenDb.csproj
+++ b/src/Particular.ThroughputCollector.Persistence.RavenDb/Particular.ThroughputCollector.Persistence.RavenDb.csproj
@@ -15,17 +15,13 @@
 
   <ItemGroup>
     <!-- Private=false & ExcludeAssets=runtime prevent repeatedly including binary dependencies of ThroughputCollector.Persistence in each persister directory -->
-    <ProjectReference Include="..\Particular.ThroughputCollector.Persistence\Particular.ThroughputCollector.Persistence.csproj" Private="false" ExcludeAssets="runtime" />
+    <ProjectReference Include="..\Particular.ThroughputCollector.Contracts\Particular.ThroughputCollector.Contracts.csproj" />
+    <ProjectReference Include="..\Particular.ThroughputCollector.Persistence\Particular.ThroughputCollector.Persistence.csproj" />
+    <ProjectReference Include="..\ServiceControl.Configuration\ServiceControl.Configuration.csproj"/>
   </ItemGroup>
 
   <ItemGroup>
     <Artifact Include="$(OutputPath)" DestinationFolder="$(ArtifactsPath)Particular.ServiceControl\ThroughputCollector\Persisters\RavenDb" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="throughput.persistence.manifest">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
   
 </Project>
