Align saga audit code to remove redundancy (#4085)
* Align saga audit code to remove redundancy

* Tweak include wildcards

---------

Co-authored-by: danielmarbach <danielmarbach@users.noreply.github.com>
Co-authored-by: Brandon Ording <bording@gmail.com>

--- a/src/ServiceControl.Audit/ServiceControl.Audit.csproj
+++ b/src/ServiceControl.Audit/ServiceControl.Audit.csproj
@@ -33,6 +33,10 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" />
   </ItemGroup>
 
+   <ItemGroup>
+    <Compile Include="..\ServiceControl.SagaAudit\**\*.cs" Exclude="..\ServiceControl.SagaAudit\obj\**\*" LinkBase="SagaAudit" />
+  </ItemGroup>
+
   <ItemGroup>
     <None Remove="Infrastructure\Hosting\Help.txt" />
     <EmbeddedResource Include="Infrastructure\Hosting\Help.txt" />
