--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -76,12 +76,22 @@
   </ItemGroup>
 
   <ItemGroup Label="Versions to pin transitive references">
+    <!-- Referenced by OWIN but not actuall part of any deployment -->
+    <PackageVersion Include="jQuery" Version="3.7.1" />
     <PackageVersion Include="Microsoft.Owin.Hosting" Version="4.2.2" />
+    <PackageVersion Include="Microsoft.Identity.Client" Version="4.60.3" />
+    <PackageVersion Include="Microsoft.IdentityModel.JsonWebTokens" Version="6.35.0" />
+    <PackageVersion Include="System.Drawing.Common" Version="7.0.0" />
     <PackageVersion Include="NServiceBus.Newtonsoft.Json" Version="2.4.0" />
     <PackageVersion Include="System.Collections.Immutable" Version="7.0.0" />
     <PackageVersion Include="System.Diagnostics.DiagnosticSource" Version="7.0.2" />
+    <PackageVersion Include="System.IdentityModel.Tokens.Jwt" Version="6.35.0" />
     <PackageVersion Include="System.Memory" Version="4.5.5" />
+    <PackageVersion Include="System.Net.Http" Version="4.3.4" />
+    <PackageVersion Include="System.Private.Uri" Version="4.3.2" />
     <PackageVersion Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
+    <PackageVersion Include="System.Security.Cryptography.Pkcs" Version="8.0.0" />
+    <PackageVersion Include="System.Text.RegularExpressions" Version="4.3.1" />
   </ItemGroup>
 
   <ItemGroup>
