Add throughput tests for RavenDB persistence

--- a/src/Particular.ThroughputCollector.Persistence.Tests.RavenDB/Particular.ThroughputCollector.Persistence.Tests.RavenDB.csproj
+++ b/src/Particular.ThroughputCollector.Persistence.Tests.RavenDB/Particular.ThroughputCollector.Persistence.Tests.RavenDB.csproj
@@ -18,12 +18,18 @@
     <PackageReference Include="NUnit" />
     <PackageReference Include="NUnit3TestAdapter" />
     <PackageReference Include="Particular.Approvals" />
+    <PackageReference Include="RavenDB.Embedded" />
   </ItemGroup>
 
-  <!--<ItemGroup>
-    <Compile Include="..Particular.ThroughputCollector.Persistence.Tests\*.cs" LinkBase="Shared" />
-    <Compile Remove="..Particular.ThroughputCollector.Persistence.Tests\PersistenceManifestLibraryTests.cs" />
+  <ItemGroup>
+    <Compile Include="..\Particular.ThroughputCollector.Persistence.Tests\*.cs" LinkBase="Shared" />
     <Compile Remove="..\Particular.ThroughputCollector.Persistence.Tests\TestsFilter.cs" />
-  </ItemGroup>-->
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="RavenLicense.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
