Adding a new code highlighter

--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   "dependencies": {
     "@tinyhttp/content-disposition": "^2.2.0",
     "@vue-flow/core": "^1.29.1",
+    "@wdns/vue-code-block": "^2.3.2",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.10.3",
-    "highlight.js": "^11.6.0",
+    "highlight.js": "^11.9.0",
     "memoize-one": "^6.0.0",
     "moment": "^2.29.4",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
-    "vue-highlight-code": "^0.1.16",
     "vue-router": "^4.2.5",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-cookies": "^1.0.6",
