All 3 images running

--- a/src/ServiceControl.Audit/Dockerfile
+++ b/src/ServiceControl.Audit/Dockerfile
@@ -9,22 +9,22 @@ COPY . .
 RUN dotnet restore src --arch $TARGETARCH
 
 # copy and publish app and libraries.
-RUN dotnet build src/ServiceControl/ServiceControl.csproj --configuration Release -graph --no-restore --arch $TARGETARCH
+RUN dotnet build src/ServiceControl.Audit/ServiceControl.Audit.csproj --configuration Release -graph --no-restore --arch $TARGETARCH
 
 
 # final stage/image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
-EXPOSE 33333
+EXPOSE 44444
 WORKDIR /
-COPY --from=build /deploy/Particular.ServiceControl ./app
+COPY --from=build /deploy/Particular.ServiceControl.Audit ./app
 
 RUN mkdir -p /var/servicecontrol && chown -R $APP_UID /var/servicecontrol
 VOLUME /var/servicecontrol
 
-ENV "ServiceControl/PersistenceType"="RavenDB" \
-    "ServiceControl/LogPath"="/var/servicecontrol/logs" \
-    "ServiceControl/ForwardErrorMessages"="False" \
-    "ServiceControl/ErrorRetentionPeriod"="15"
+ENV "ServiceControl.Audit/PersistenceType"="RavenDB" \
+    "ServiceControl.Audit/LogPath"="/var/servicecontrol/logs" \
+    "ServiceControl.Audit/ForwardAuditMessages"="False" \
+    "ServiceControl.Audit/AuditRetentionPeriod"="14"
 
 USER $APP_UID
-ENTRYPOINT ["./app/ServiceControl"]
+ENTRYPOINT ["./app/ServiceControl.Audit"]
